generate swagger.json / clean up code
